infra/blog-environment/docker/local/env/envoy/envoy.yaml
admin:
#  access_log_path: /envoy_log/admin_access.log
  address:
    socket_address:
#      protocol: TCP
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
#          protocol: TCP
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
#              access_log:
#                - name: envoy.access_loggers.file
#                  typed_config:
#                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
#                    path: /envoy_log/access.log
#              scheme_header_transformation:
#                scheme_to_overwrite: https
              stat_prefix: ingress_http
              codec_type: AUTO
              http_filters:
                - name: envoy.filters.http.grpc_web
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                - name: envoy.filters.http.cors
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    cors:
                      allow_origin_string_match:
                        - prefix: "*"
                      allow_methods: GET, PUT, DELETE, POST, OPTIONS
                      allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                      max_age: "1728000"
                      expose_headers: custom-header-1,grpc-status,grpc-message
                    routes:
                      # START COPY ROUTE SETTING
                      # - match:
                      #     prefix: '/run.freshr.common.grpc.logging'
                      #   route:
                      #     cluster: logging-cluster
                      # END COPY ROUTE SETTING
  clusters:
    # START COPY CLUSTER SETTINGS
    # - name: logging-cluster
    #   connect_timeout: 1.25s
    #   type: LOGICAL_DNS
    #   http2_protocol_options: { }
    #   lb_policy: ROUND_ROBIN
    #   load_assignment:
    #     cluster_name: logging-cluster
    #     endpoints:
    #       - lb_endpoints:
    #           - endpoint:
    #               address:
    #                 socket_address:
    #                   address: host.docker.internal
    #                   port_value: 40802
    # END COPY CLUSTER SETTINGS
